<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <Button
        style="@style/button"
        android:text="@string/spotify"
        android:id="@+id/spotify_button"
        android:layout_below="@+id/title_view"
        android:layout_alignEnd="@+id/title_view"
        android:layout_alignStart="@+id/title_view"
    />

    <Button
        style="@style/button"
        android:text="@string/scores"
        android:id="@+id/scores_button"
        android:layout_below="@+id/spotify_button"
        android:layout_alignEnd="@+id/title_view"
        android:layout_alignStart="@+id/title_view" />

    <Button
        style="@style/button"
        android:text="@string/library"
        android:id="@+id/library_button"
        android:layout_below="@+id/scores_button"
        android:layout_alignEnd="@+id/title_view"
        android:layout_alignStart="@+id/title_view"
     />

    <Button
        style="@style/button"
        android:text="@string/build"
        android:id="@+id/build_button"
        android:layout_below="@+id/library_button"
        android:layout_alignEnd="@+id/title_view"
        android:layout_alignStart="@+id/title_view" />

    <Button
        style="@style/button"
        android:text="@string/xyz"
        android:id="@+id/xyz_button"
        android:background="#3F51B5"
        android:layout_below="@+id/build_button"
        android:layout_alignStart="@+id/build_button"
        android:layout_alignEnd="@+id/build_button" />

    <Button
        style="@style/button"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/xyz_button"
        android:layout_alignEnd="@+id/title_view"
        android:layout_alignStart="@+id/title_view"
        android:background="@color/green" />

</RelativeLayout>
